@@ -1,6 +1,7 @@
 package com.gentics.mesh.core.schema;
 
 import static com.gentics.mesh.assertj.MeshAssertions.assertThat;
+import static com.gentics.mesh.core.rest.schema.change.impl.SchemaChangeModel.CONTAINER_FLAG_KEY;
 import static com.gentics.mesh.core.rest.schema.change.impl.SchemaChangeModel.DISPLAY_FIELD_NAME_KEY;
 import static com.gentics.mesh.core.rest.schema.change.impl.SchemaChangeOperation.ADDFIELD;
 import static com.gentics.mesh.core.rest.schema.change.impl.SchemaChangeOperation.REMOVEFIELD;
@@ -72,6 +73,30 @@ public class SchemaDiffEndpointTest extends AbstractMeshTest {
 
 		schema.setContainer(false);
 		return schema;
+	}
+
+	@Test
+	public void testDiffContainerFlag() {
+		try (Tx tx = tx()) {
+			SchemaContainer container = schemaContainer("content");
+			Schema request = getSchema();
+
+			// Flag not specified
+			request.setContainer(null);
+			SchemaChangesListModel changes = call(() -> client().diffSchema(container.getUuid(), request));
+			assertThat(changes.getChanges()).hasSize(0);
+
+			// Set to same value
+			request.setContainer(false);
+			changes = call(() -> client().diffSchema(container.getUuid(), request));
+			assertThat(changes.getChanges()).hasSize(0);
+
+			// Flag set to different value
+			request.setContainer(true);
+			changes = call(() -> client().diffSchema(container.getUuid(), request));
+			assertThat(changes.getChanges()).hasSize(1);
+			assertThat(changes.getChanges().get(0)).is(UPDATESCHEMA).hasProperty(CONTAINER_FLAG_KEY, true);
+		}
 	}
 
 	@Test
